--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,6 @@ add_executable(Leetcode1 main.cpp
         Coders-tasks/coders_lambda_7.h
         Coders-tasks/coders_iterator_8.h
         Coders-tasks/coders_algorithms_foreach_9.h
-        Coders-tasks/coders_algorithms_10.h)
+        Coders-tasks/coders_algorithms_10.h
+        Easy/majority_element.h
+        Medium/longest_substr_wo_repeat.h)
