cpp course task + ChatGPT embedded cpp tasks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,4 +46,9 @@ add_executable(Leetcode1 main.cpp
         Easy/majority_element.h
         Medium/longest_substr_wo_repeat.h
         Medium/longest_palindromic_substr.h
-        Coders-tasks/coders_classes_11.h)
+        Coders-tasks/coders_classes_11.h
+        other-tasks/device-message.h
+        other-tasks/sensors.h
+        other-tasks/rtos-simulation.h
+        other-tasks/message_queue.h
+)
